--- a/WebApp/src/app/core/header/header.component.html
+++ b/WebApp/src/app/core/header/header.component.html
@@ -1,3 +1,18 @@
+<div style="z-index:412323 !important;" class="alert alert-app-level alert-info" *ngIf="alert.show">
+    <div class="alert-items">
+        <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+                <cds-icon class="alert-icon" shape="info-circle"></cds-icon>
+            </div>
+            <div class="alert-text">
+               {{alert.message}}
+            </div>
+        </div>
+    </div>
+    <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
+        <clr-icon aria-hidden="true" shape="close"></clr-icon>
+    </button>
+</div>
 <header class="header header-6">
     <div class="branding">
         <a href="javascript:void(0)">
