--- a/WebApp/src/app/core/header/header.component.html
+++ b/WebApp/src/app/core/header/header.component.html
@@ -16,7 +16,7 @@
 <header class="header header-6">
     <div class="branding">
         <a href="javascript:void(0)">
-            <clr-icon shape="vm-bug"></clr-icon>
+            <clr-icon style="color: white !important" shape="file"></clr-icon>
             <span class="title">Document System</span>
         </a>
     </div>
