--- a/WebApp/src/app/modules/folders/folders.component.html
+++ b/WebApp/src/app/modules/folders/folders.component.html
@@ -5,7 +5,11 @@
             <clr-datagrid>
                 <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
 
-                <clr-dg-row *clrDgItems="let folder of folders" (click)="openFolder(folder.id)">
+                <clr-dg-row *clrDgItems="let folder of folders" (dblclick)="openFolder(folder.id)">
+                    <clr-dg-action-overflow>
+                        <button class="action-item" (click)="openFolder(folder.id)">Open</button>
+                        <button class="action-item" (click)="deleteFolder(folder)">Delete</button>
+                    </clr-dg-action-overflow>
                     <clr-dg-cell>{{folder.name}}</clr-dg-cell>
                 </clr-dg-row>
 
