--- a/WebApp/src/app/modules/login/login.component.html
+++ b/WebApp/src/app/modules/login/login.component.html
@@ -6,8 +6,7 @@
           novalidate>
         <section class="title">
             <h3 class="welcome">Welcome to</h3>
-            Company Product Name
-            <h5 class="hint">Use your Company ID to sign in or create one now</h5>
+            Document System
         </section>
         <div class="login-group">
             <clr-input-container>
@@ -22,7 +21,6 @@
                 Invalid user name or password
             </div>
             <button type="submit" class="btn btn-primary">NEXT</button>
-            <a href="javascript://" class="signup">Sign up for a Company ID</a>
         </div>
     </form>
 </div>
