alert error showing correct type

--- a/WebApp/src/app/core/header/header.component.html
+++ b/WebApp/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<div style="z-index:412323 !important;" class="alert alert-app-level alert-info" *ngIf="alert.show">
+<div style="z-index:412323 !important;" class="alert alert-app-level alert-{{alert.type}}" *ngIf="alert.show">
     <div class="alert-items">
         <div class="alert-item static">
             <div class="alert-icon-wrapper">
