--- a/WebApp/src/app/core/header/header.component.html
+++ b/WebApp/src/app/core/header/header.component.html
@@ -15,20 +15,17 @@
 </div>
 <header class="header header-6">
     <div class="branding">
-        <a href="javascript:void(0)">
+        <a href="/folders">
             <clr-icon style="color: white !important" shape="file"></clr-icon>
             <span class="title">Document System</span>
         </a>
     </div>
     <div class="header-nav">
-        <a href="javascript://" class="nav-link nav-icon">
-            <clr-icon shape="cloud"></clr-icon>
-        </a>
-        <a href="/folders" class="active nav-link nav-icon">
+        <a href="/folders" [class.active] = "currentRoute === '/documents' || currentRoute=='/folders'" class="nav-link nav-icon">
             <clr-icon shape="folder"></clr-icon>
         </a>
         <clr-dropdown [clrCloseMenuOnItemClick]="false" (click)="getLists()">
-            <button clrDropdownTrigger aria-label="Lists" class="active nav-link nav-icon">
+            <button clrDropdownTrigger aria-label="Lists" [class.active] = "currentRoute === '/lists'" class="nav-link nav-icon">
                 <clr-icon shape="list" direction="down"></clr-icon>
             </button>
             <clr-dropdown-menu *clrIfOpen>
@@ -41,7 +38,7 @@
             </clr-dropdown-menu>
         </clr-dropdown>
         <clr-dropdown [clrCloseMenuOnItemClick]="false">
-            <button clrDropdownTrigger aria-label="Lists" class="active nav-link nav-icon">
+            <button clrDropdownTrigger  [class.active] = "currentRoute === '/users' || currentRoute === '/permissions'" aria-label="Lists" class="nav-link nav-icon">
                 <clr-icon shape="user" direction="down"></clr-icon>
             </button>
             <clr-dropdown-menu *clrIfOpen>
