Validations and some other staff

--- a/WebApp/src/app/modules/documents/documents.component.html
+++ b/WebApp/src/app/modules/documents/documents.component.html
@@ -203,10 +203,10 @@
                     <label>Company:</label>
                     <input  clrInput type="text" name="company"  formControlName="company"/>
                 </clr-input-container>
-                <clr-input-container>
+                <clr-date-container>
                     <label>Date:</label>
-                    <input  clrInput type="text" name="date"  formControlName="date"/>
-                </clr-input-container>
+                    <input type="date" clrDate name="date" formControlName="date"/>
+                </clr-date-container>
                 <clr-input-container>
                     <label>Contact:</label>
                     <input  clrInput type="text" name="contact"  formControlName="contact"/>
