--- a/WebApp/src/app/core/header/header.component.html
+++ b/WebApp/src/app/core/header/header.component.html
@@ -37,7 +37,7 @@
                 <div clrDropdownItem (click)="addList()">Add new list</div>
             </clr-dropdown-menu>
         </clr-dropdown>
-        <clr-dropdown [clrCloseMenuOnItemClick]="true">
+        <clr-dropdown [clrCloseMenuOnItemClick]="true" *ngIf="isAdmin()">
             <button clrDropdownTrigger  [class.active] = "currentRoute === '/users' || currentRoute === '/permissions'" aria-label="Lists" class="nav-link nav-icon">
                 <clr-icon shape="user" direction="down"></clr-icon>
             </button>
